[gd_scene load_steps=19 format=3 uid="uid://dum14k8byt87m"]

[ext_resource type="Script" uid="uid://bp15t7w6hj3dj" path="res://scripts/coat_gui.gd" id="1_bgw28"]
[ext_resource type="Texture2D" uid="uid://diy8htskfybtd" path="res://assets/moon_bg.png" id="2_ugfvs"]
[ext_resource type="Texture2D" uid="uid://8f0rfohmniwa" path="res://assets/menuUI.png" id="2_ypuxh"]
[ext_resource type="Texture2D" uid="uid://dm1bh2yywotao" path="res://assets/icon.png" id="3_2qsf6"]
[ext_resource type="Theme" uid="uid://dm4jlnbmnj4eb" path="res://assets/UI_theme_dark.tres" id="5_0f6da"]
[ext_resource type="Theme" uid="uid://dix1yxdlw8hbv" path="res://assets/UI_theme_smol.tres" id="5_fupdb"]
[ext_resource type="Theme" uid="uid://vjxbkxdwdxu4" path="res://assets/UI_theme_alert.tres" id="5_ra54s"]
[ext_resource type="Theme" uid="uid://cf6ttsgxwgavd" path="res://assets/UI_theme_blue.tres" id="5_sgdhu"]
[ext_resource type="Theme" uid="uid://db3wwmhf400fw" path="res://assets/UI_theme_dark_big.tres" id="5_swcq4"]
[ext_resource type="PackedScene" uid="uid://b3cou3ndcs75h" path="res://scene/components/error_message.tscn" id="6_m2onb"]
[ext_resource type="PackedScene" uid="uid://s4coqphlup24" path="res://scene/components/buttonSMOL2.tscn" id="7_tgfnp"]
[ext_resource type="PackedScene" uid="uid://cdigxro282sfm" path="res://scene/components/checkAlert.tscn" id="9_edoao"]
[ext_resource type="Theme" uid="uid://d1f8o0u5d7nrp" path="res://assets/UI_theme_green.tres" id="9_yn7pw"]
[ext_resource type="PackedScene" uid="uid://bpgiy2j33slge" path="res://scene/components/pop_up.tscn" id="10_75oqe"]
[ext_resource type="Theme" uid="uid://cof5u4dam7c2t" path="res://assets/UI_theme_shadowed.tres" id="10_d6poe"]
[ext_resource type="PackedScene" uid="uid://wonyaiea8tn2" path="res://scene/components/buttonSMOL2_blue.tscn" id="13_1pstn"]
[ext_resource type="PackedScene" uid="uid://clixcby1mmxr3" path="res://scene/helpScreen.tscn" id="13_f6knk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kx556"]
atlas = ExtResource("2_ypuxh")
region = Rect2(58, 10, 28, 28)

[node name="coatGUI" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bgw28")

[node name="background" type="Control" parent="."]
anchors_preset = 0
offset_left = -640.0
offset_top = -360.0
offset_right = -600.0
offset_bottom = -320.0

[node name="TextureRect2" type="TextureRect" parent="background"]
z_index = -3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 32.6
anchor_bottom = 18.65
offset_left = -20.0
offset_top = -20.0
offset_right = 1260.0
offset_bottom = 700.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_ugfvs")
stretch_mode = 1
metadata/_edit_use_anchors_ = true

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -304.0
offset_top = -167.5
offset_right = 304.0
offset_bottom = 167.5
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_kx556")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
custom_minimum_size = Vector2(513, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -204.0
offset_top = 9.0
offset_right = 204.0
offset_bottom = 76.0
grow_horizontal = 2
alignment = 1

[node name="TitleContainer" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 130
alignment = 1

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/VBoxContainer/TitleContainer"]
visible = false
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
texture = ExtResource("3_2qsf6")

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/TitleContainer"]
layout_mode = 2
theme = ExtResource("5_swcq4")
text = "New Horse Coat"

[node name="TextureRect2" type="TextureRect" parent="NinePatchRect/VBoxContainer/TitleContainer"]
visible = false
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
texture = ExtResource("3_2qsf6")
flip_h = true

[node name="coatName" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/coatName"]
layout_mode = 2
theme = ExtResource("5_fupdb")
text = "Coat Name"
horizontal_alignment = 2

[node name="required" type="Label" parent="NinePatchRect/VBoxContainer/coatName"]
layout_mode = 2
theme = ExtResource("5_ra54s")
text = "*"
horizontal_alignment = 2

[node name="coatText" type="LineEdit" parent="NinePatchRect/VBoxContainer/coatName"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("5_fupdb")
placeholder_text = "quiz_the_test_pony"

[node name="nameCheck" parent="NinePatchRect/VBoxContainer/coatName" instance=ExtResource("7_tgfnp")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
button_text = "Clean *"

[node name="HelperLabel2" type="Label" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
theme = ExtResource("9_yn7pw")
theme_override_constants/line_spacing = -2
text = "The name needs to only include lower case letters, numbers, and underscores."
horizontal_alignment = 1
autowrap_mode = 2

[node name="HelperLabel3" type="Label" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_0f6da")
theme_override_constants/line_spacing = -2
text = "It is recommended to name the coat \"artist_name_coat_name\" as each coat has to be uniquely named."
horizontal_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="HelperLabel3" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme = ExtResource("5_ra54s")
theme_override_colors/font_outline_color = Color(1, 1, 1, 0.579)
theme_override_constants/line_spacing = -2
text = "* Press the 'Clean' button"
horizontal_alignment = 1

[node name="HelperLabel4" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme = ExtResource("5_0f6da")
theme_override_constants/line_spacing = -2
text = "to make your text java compliant and ready to be saved into the pack."
horizontal_alignment = 1

[node name="Container" type="Container" parent="NinePatchRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 9)
layout_mode = 2

[node name="Line2D" type="Line2D" parent="NinePatchRect/VBoxContainer/Container"]
position = Vector2(3.7868, 3)
scale = Vector2(3.07153, 1)
points = PackedVector2Array(176.296, 2, -1, 2)
width = 1.0
default_color = Color(0.6862745, 0.36078432, 0.4, 1)

[node name="helperLabel7" type="Label" parent="NinePatchRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 14)
layout_mode = 2
theme = ExtResource("10_d6poe")
text = "~~ Set Coat Information ~~"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
custom_minimum_size = Vector2(546, 100)
layout_mode = 2
theme_override_constants/separation = 22
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Container" type="Container" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 9)
layout_mode = 2

[node name="Label2" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_sgdhu")
theme_override_constants/line_spacing = -5
text = "The only models that have wing texture options are the Pegasus and Irish Draught 
(Base SWEM Model) "
horizontal_alignment = 1
autowrap_mode = 2

[node name="breed" type="HBoxContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer/breed"]
layout_mode = 2
theme = ExtResource("5_fupdb")
text = "Breed Model:"
horizontal_alignment = 2

[node name="breedoptions" type="OptionButton" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer/breed"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1
selected = 6
item_count = 18
popup/item_0/text = "American Quarter Horse"
popup/item_0/id = 0
popup/item_1/text = "Arabian"
popup/item_1/id = 1
popup/item_2/text = "Breton"
popup/item_2/id = 2
popup/item_3/text = "Donkey"
popup/item_3/id = 3
popup/item_4/text = "Fjord"
popup/item_4/id = 4
popup/item_5/text = "Friesian"
popup/item_5/id = 5
popup/item_6/text = "Irish Draught (SWEM Base)"
popup/item_6/id = 6
popup/item_7/text = "Kladruber"
popup/item_7/id = 7
popup/item_8/text = "Knabstrupper"
popup/item_8/id = 8
popup/item_9/text = "Marwari"
popup/item_9/id = 9
popup/item_10/text = "Mule"
popup/item_10/id = 10
popup/item_11/text = "Mustang"
popup/item_11/id = 11
popup/item_12/text = "Pegasus"
popup/item_12/id = 12
popup/item_13/text = "Shire"
popup/item_13/id = 13
popup/item_14/text = "Thoroughbred"
popup/item_14/id = 14
popup/item_15/text = "Turkoman"
popup/item_15/id = 15
popup/item_16/text = "Warmblood"
popup/item_16/id = 16
popup/item_17/text = "-- Foal Coat --"
popup/item_17/id = 17

[node name="wings" type="HBoxContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer/wings"]
layout_mode = 2
theme = ExtResource("5_fupdb")
text = "Has wings?"
horizontal_alignment = 2

[node name="wingsCheckBox" type="CheckBox" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer/wings"]
unique_name_in_owner = true
layout_mode = 2

[node name="wingsLabel" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer/wings"]
unique_name_in_owner = true
custom_minimum_size = Vector2(18, 0)
layout_mode = 2
theme = ExtResource("5_0f6da")
text = "No"

[node name="Container" type="Container" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2

[node name="Line2D" type="Line2D" parent="NinePatchRect/VBoxContainer/HBoxContainer/Container"]
position = Vector2(31.49997, 2.5)
scale = Vector2(3.0766, 1)
points = PackedVector2Array(-7, 2, -7, 110)
width = 0.5
default_color = Color(0.6862745, 0.36078432, 0.4, 1)

[node name="VBoxContainer2" type="VBoxContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Preload your textures into the pack!"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("5_sgdhu")
theme_override_constants/line_spacing = -5
text = "The selected texture will be copied to the pack. If left blank, you will need to add it manually."
horizontal_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="renderButton" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer2" instance=ExtResource("7_tgfnp")]
unique_name_in_owner = true
layout_mode = 2

[node name="renderLineEdit" type="LineEdit" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
placeholder_text = "Coat Texture"
editable = false

[node name="HBoxContainer3" type="HBoxContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="wingButton" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer3" instance=ExtResource("7_tgfnp")]
unique_name_in_owner = true
layout_mode = 2

[node name="wingLineEdit" type="LineEdit" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
placeholder_text = "Wing Texture"
editable = false

[node name="Container2" type="Container" parent="NinePatchRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2

[node name="Line2D" type="Line2D" parent="NinePatchRect/VBoxContainer/Container2"]
visible = false
position = Vector2(3.7868, 3)
scale = Vector2(3.07153, 1)
points = PackedVector2Array(176.296, 2, -1, 2)
width = 1.0
default_color = Color(0.811765, 0.67451, 0.490196, 1)

[node name="Label2" type="Label" parent="NinePatchRect/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0.5)
layout_mode = 2
theme = ExtResource("5_sgdhu")
theme_override_constants/line_spacing = -5
text = "Addendum coats are randomly assigned during breeding and not lapis cyclable.
To get a specific coat, you will need to use the summon command that is provided."
horizontal_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect"]
layout_mode = 0
offset_left = 467.0
offset_top = 313.0
offset_right = 560.0
offset_bottom = 327.0

[node name="required" type="Label" parent="NinePatchRect/HBoxContainer"]
layout_mode = 2
theme = ExtResource("5_ra54s")
text = "*"
horizontal_alignment = 2

[node name="Label" type="Label" parent="NinePatchRect/HBoxContainer"]
layout_mode = 2
theme = ExtResource("10_d6poe")
text = "= required field"

[node name="confirmButton" parent="NinePatchRect" instance=ExtResource("13_1pstn")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 537.0
offset_top = 306.0
offset_right = 601.0
offset_bottom = 328.0
button_text = "Generate"

[node name="backButton" parent="NinePatchRect" instance=ExtResource("7_tgfnp")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 7.0
offset_top = 306.0
offset_right = 71.0
offset_bottom = 328.0
button_text = "Main Menu"

[node name="butterflys" type="Control" parent="NinePatchRect"]
anchors_preset = 0
offset_left = 5.0
offset_top = 5.5
offset_right = 45.0
offset_bottom = 45.5

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/butterflys"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 0
offset_left = 60.0
offset_top = 3.0
offset_right = 90.0
offset_bottom = 33.0
texture = ExtResource("3_2qsf6")

[node name="TextureRect2" type="TextureRect" parent="NinePatchRect/butterflys"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 0
offset_left = 509.0
offset_top = 3.0
offset_right = 539.0
offset_bottom = 33.0
texture = ExtResource("3_2qsf6")
flip_h = true

[node name="popUP_Saved" parent="." instance=ExtResource("10_75oqe")]
visible = false
layout_mode = 1

[node name="popUP2_Dupe" parent="." instance=ExtResource("10_75oqe")]
visible = false
layout_mode = 1

[node name="popUPexit" parent="." instance=ExtResource("10_75oqe")]
visible = false
layout_mode = 1

[node name="checkPath" parent="." instance=ExtResource("9_edoao")]
custom_minimum_size = Vector2(10, 10)
layout_mode = 0
offset_left = 123.0
offset_top = -125.0
offset_right = 138.0
offset_bottom = -109.0
scale = Vector2(1.5, 1.5)

[node name="helpscreen" parent="." instance=ExtResource("13_f6knk")]
visible = false
layout_mode = 1

[node name="FileDialog" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Open a File"
initial_position = 4
size = Vector2i(400, 300)
theme = ExtResource("5_fupdb")
theme_override_colors/folder_icon_color = Color(0.758928, 0.918193, 0.727778, 1)
theme_override_colors/file_icon_color = Color(0.584314, 0.854902, 0.847059, 1)
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
access = 2
filters = PackedStringArray("*.png;PNG Image")
use_native_dialog = true

[node name="popUPload" parent="." instance=ExtResource("10_75oqe")]
visible = false
layout_mode = 1

[node name="errorMessage" parent="." instance=ExtResource("6_m2onb")]
visible = false
layout_mode = 1

[connection signal="text_changed" from="NinePatchRect/VBoxContainer/coatName/coatText" to="." method="_on_coat_text_text_changed"]
[connection signal="item_selected" from="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer/breed/breedoptions" to="." method="_on_breedoptions_item_selected"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer/wings/wingsCheckBox" to="." method="_on_wings_check_box_pressed"]
[connection signal="button_pressed" from="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer2/renderButton" to="." method="_on_render_button_button_pressed"]
[connection signal="button_pressed" from="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer3/wingButton" to="." method="_on_wing_button_button_pressed"]
[connection signal="button_pressed" from="NinePatchRect/confirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="button_pressed" from="NinePatchRect/backButton" to="." method="_on_back_button_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
